# mcp-adpa

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  demo.py  hybrid_embeddings_example.py  production_example.py  quick_demo.py
src/adpa/: __init__.py  analyzer.py  cli.py  context.py  indexer.py  models.py  scanner.py
tests/: test_analyzer.py
